팔로우 관리 서비스의 명복을 빌어 주세요.. / 이제 트윗일지 보고서에서 팔로우 관리를 실행할 수 있습니다. / 팔로우 관리에서 팔로우쉽 변동이 있을 경우 해당 트윗일지 보고서를 갱신합니다.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,12 +26,12 @@
     <string name="Error">에러!</string>
     <string name="RateLimitError">트위터에서 제공하는 api 한도를 초과했습니다\n나중에 다시 시도해주세요.\n(%1$s)</string>
     <string name="AreYouSure">확실한가요?</string>
-    <string name="TweetCannotRestore">삭제된 트윗은 되돌릴 수 없습니다.</string>
+    <string name="TweetCannotRestore">삭제된 트윗은 되돌릴 수 없어요.</string>
     <string name="YesDeleteIt">네, 삭제할게요!</string>
     <string name="Wait">잠깐만요!</string>
-    <string name="FriendPulling">팔로우 목록을 가져오는 중입니다.</string>
-    <string name="FollowerPulling">팔로워 목록을 가져오는 중입니다.</string>
-    <string name="CompareFsFw">팔로잉 목록과 팔로워 목록을 비교하는 중입니다.</string>
+    <string name="FriendPulling">팔로우 목록을 가져오는 중이에요.</string>
+    <string name="FollowerPulling">팔로워 목록을 가져오는 중이에요.</string>
+    <string name="CompareFsFw">팔로잉 목록과 팔로워 목록을 비교하는 중이에요.</string>
     <string name="TweetAnalytics">트윗 일지</string>
     <string name="TweetAnalyticsDesc">트윗, 팔로우쉽 변화 추이를 봅니다.</string>
     <string name="PermissionRequestTitle">권한이 필요합니다.</string>
@@ -39,10 +39,10 @@
     <string name="No">아니요</string>
     <string name="Unfollow">언팔로우</string>
     <string name="ShowProfile">프로필 보기</string>
-    <string name="ActionDoNotRestore">이 행동은 돌이킬 수 없습니다!</string>
+    <string name="ActionDoNotRestore">이 행동은 돌이킬 수 없어요!</string>
     <string name="JobDone">작업을 완료했습니다.</string>
     <string name="Chainblock">체인블락</string>
-    <string name="ChainblockDescription">대상 유저의 모든 팔로잉과 팔로워를 블락합니다.</string>
+    <string name="ChainblockDescription">대상 유저의 모든 팔로잉과 팔로워를 블락해요.</string>
     <string name="Report_Label_TweetCount">트윗 수 : </string>
     <string name="Report_Label_FriendCount">팔로잉 수 : </string>
     <string name="Report_Label_FollowerCount">팔로워 수 : </string>
@@ -50,33 +50,33 @@
     <string name="Format_Time">aa hh시 mm분</string>
     <string name="TweetReportProcessing">트윗 일지를 작성중입니다..</string>
     <string name="TweetReportDone">트윗 일지를 작성했습니다.</string>
-    <string name="TweetReportCant">이미 트윗일지를 기록했습니다.\n앱을 재시작한 후 시도해 주세요.</string>
+    <string name="TweetReportCant">이미 트윗일지를 기록했습니다.\n나중에 다시 시도해 주세요..</string>
     <string name="NewFriends">이어진 팔로우</string>
     <string name="NoMoreFriends">끊어진 팔로우</string>
     <string name="NewFollowers">새로운 팔로워</string>
     <string name="NoMoreFollowers">사라진 팔로워</string>
     <string name="TokenManagement">로그인 관리</string>
-    <string name="TokenManagementDetail">트윗일지에 로그인된 계정을 관리합니다.</string>
+    <string name="TokenManagementDetail">트윗일지에 로그인된 계정을 관리할 수 있어요.</string>
     <string name="AddUser">유저 추가</string>
-    <string name="NoApplicableUser">해당하는 유저가 없습니다.</string>
+    <string name="NoApplicableUser">해당하는 유저가 없어요.</string>
     <string name="ScreenNameHint">타깃의 아이디는?</string>
     <string name="Follower">팔로워</string>
     <string name="Friend">팔로잉</string>
     <string name="ChainBlockWarning1">이 유저가 확실한가요?</string>
-    <string name="ChainBlockWarning2">이 행동은 돌이킬 수 없습니다.\n트윗지기 앱은 이에 대하여 어떠한 책임도 지지 않습니다.\n한번 더 신중히 생각해 보시기 바랍니다.</string>
-    <string name="UserNotFoundError">해당 유저를 찾을 수 없었습니다.</string>
-    <string name="NotCompletely">API 리밋으로 인하여 일부 데이터를 불러오지 못했습니다.</string>
-    <string name="ChainBlockDone">체인블락을 완료했습니다.</string>
-    <string name="UserProtected">프로텍트 설정된 유저를 대상으로 사용할 수 없습니다.</string>
+    <string name="ChainBlockWarning2">이 행동은 돌이킬 수 없어요!.\n트윗지기 앱은 이에 대하여 어떠한 책임도 지지 않아요.\n한번 더 신중히 생각해 보시길 바랄게요.</string>
+    <string name="UserNotFoundError">해당 유저를 찾을 수 없었어요.</string>
+    <string name="NotCompletely">API 리밋으로 인하여 일부 데이터를 불러오지 못했어요.</string>
+    <string name="ChainBlockDone">체인블락을 완료했어요.</string>
+    <string name="UserProtected">프로텍트 설정된 유저를 대상으로 사용할 수 없어요!</string>
     <string name="ChainBlockProcessing">해당 유저들을 블락하는 중입니다.\n(%1$d / %2$d)</string>
     <string name="BlockClear">블락 일괄 해제</string>
-    <string name="BlockClearDescriptipn">내가 블락한 유저들을 전부 블락 해제합니다.</string>
+    <string name="BlockClearDescriptipn">내가 블락한 유저들을 전부 블락 해제해요.</string>
     <string name="Run">실행하기</string>
-    <string name="FetchBlockedUsers">블락한 유저 정보를 가져오는 중입니다.</string>
-    <string name="ClearBlockedUsers">블락을 해제하는 중입니다.\n(%1$d / %2$d)</string>
-    <string name="BlockCleared">모든 블락을 해제했습니다.</string>
+    <string name="FetchBlockedUsers">블락한 유저 정보를 가져오는 중이에요.</string>
+    <string name="ClearBlockedUsers">블락을 해제하는 중이에요.\n(%1$d / %2$d)</string>
+    <string name="BlockCleared">모든 블락을 해제했어요!.</string>
     <string name="Tweeper">트윗지기</string>
-    <string name="Hetzer_WaitingTitle">가져올 트윗이 너무 많아 API 한도를 초과했습니다.</string>
+    <string name="Hetzer_WaitingTitle">가져올 트윗이 너무 많아 API 한도를 초과했어요.</string>
     <string name="HetzerConditions_1">내가 마음에 들어한 트윗</string>
     <string name="HetzerConditions_2">내가 마음에 들어하지 않은 트윗</string>
     <string name="HetzerConditions_3">내가 리트윗한 트윗</string>
@@ -101,27 +101,27 @@
     <string name="HetzerConditions_12_Desc">어떤 키워드가 포함되지 않았을 때 트윗을 남겨둘까요?</string>
     <string name="HetzerConditions_15_Desc">최근 몇 개 까지의 트윗을 남겨둘까요?</string>
     <string name="HetzerConditions_16_Desc">최근 몇 분 내에 작성한 트윗까지 남겨둘까요?</string>
-    <string name="FriendFetch_WaitingTitle">팔로잉한 사람이 너무 많아 API 한도를 초과했습니다.</string>
-    <string name="FollowerFetch_WaitingTitle">팔로워가 너무 많아 API 한도를 초과했습니다.</string>
-    <string name="WaitingDesc">잠시 후 자동으로 다시 시도합니다..</string>
-    <string name="FriendFetch_PullingTile">팔로잉 목록을 불러오는 중입니다.</string>
-    <string name="FollowrFetch_PullingTile">팔로워 목록을 불러오는 중입니다..</string>
-    <string name="FriendFetch_PullingDesc">현재 %1$d명의 유저를 불러왔습니다.</string>
-    <string name="FollowerManagementDone">모든 팔로잉과 팔로워를 불러왔습니다.</string>
+    <string name="FriendFetch_WaitingTitle">팔로잉한 사람이 너무 많아 API 한도를 초과했어요.</string>
+    <string name="FollowerFetch_WaitingTitle">팔로워가 너무 많아 API 한도를 초과했어요.</string>
+    <string name="WaitingDesc">잠시 후 자동으로 다시 시도할게요…</string>
+    <string name="FriendFetch_PullingTile">팔로잉 목록을 불러오는 중이에요.</string>
+    <string name="FollowrFetch_PullingTile">팔로워 목록을 불러오는 중이에요.</string>
+    <string name="FriendFetch_PullingDesc">현재 %1$d명의 유저를 불러왔어요.</string>
+    <string name="FollowerManagementDone">모든 팔로잉과 팔로워를 불러왔어요.</string>
     <string name="Error_NoParameter">인텐트 호출에 필요한 인자가 갖춰지지 않았습니다. 액티비티를 종료합니다.</string>
     <string name="Error_WrongParameter">인텐트 호출에 필요한 인자가 잘못되었습니다. 액티비티를 종료합니다.</string>
     <string name="TweetCleanerReport">트윗 청소기 보고서</string>
-    <string name="TweetCleanerReportDesc">트윗 청소기가 삭제한 트윗들입니다.</string>
+    <string name="TweetCleanerReportDesc">트윗 청소기가 삭제한 트윗들이에요.</string>
     <string name="DeletedTweetCount">삭제한 트윗 수 : %1$d</string>
     <string name="SavedTweetCount">남긴 트윗 수 : %1$d</string>
     <string name="DeleteReportsDesc">조회할 보고서를 선택해주세요.</string>
-    <string name="TweetCleanerNoReport">트윗 청소기를 실행한 이력이 없습니다.</string>
+    <string name="TweetCleanerNoReport">트윗 청소기를 실행한 이력이 없어요!</string>
     <string name="DateFormat">yyyy년 MM월 dd일 hh시 mm분 ss초</string>
-    <string name="FollowManagement">팔로우 관리</string>
-    <string name="FollowManagementDesc">나와 맞팔이 아닌 팔로잉 / 팔로워를 봅니다.</string>
+    <string name="FollowManagement">언팔매니저</string>
+    <string name="FollowManagementDesc">나와 맞팔이 아닌 팔로잉 / 팔로워를 보아요.</string>
     <string name="FollowManagementReports">팔로우 관리 보고서들</string>
-    <string name="duplicateService_Hetzer">트윗 청소기가 이미 실행중입니다.\n한 번에 하나의 청소기만 실행할 수 있습니다.</string>
-    <string name="duplicateService_FollowManager">팔로우 관리가 이미 실행중입니다.\n한 번에 하나만 실행할 수 있습니다.</string>
+    <string name="duplicateService_Hetzer">트윗 청소기가 이미 실행중입니다.\n한 번에 하나의 청소기만 실행할 수 있어요.</string>
+    <string name="duplicateService_FollowManager">팔로우 관리가 이미 실행중입니다.\n한 번에 하나만 실행할 수 있어요.</string>
     <string name="NoReport">실행 이력이 없습니다.</string>
     <string name="General">기본</string>
     <string name="TweetCleanerReports">트윗 청소기 보고서들</string>
@@ -131,13 +131,13 @@
     <string name="FollowManagementReport">팔로우 관리 보고서</string>
     <string name="Traitors">나를 맞팔하지 않은 트친</string>
     <string name="Fans">나를 구독하는 사람들</string>
-    <string name="NoMatchedUsers">더 이상 해당하는 유저가 없습니다.</string>
+    <string name="NoMatchedUsers">해당되는 유저가 없어요.</string>
     <string name="BlockUnblock">블언블</string>
     <string name="RemovedTweets">삭제된 트윗들</string>
-    <string name="NoMatchedTweets">더 이상 해당하는 트윗이 없습니다.</string>
+    <string name="NoMatchedTweets">해당되는 트윗이 없어요.</string>
     <string name="SavedTweets">남겨진 트윗들</string>
     <string name="TouchToExpend">여기를 터치해서 접고 펼 수 있어요!</string>
-    <string name="API_WaitingTitle">API 한도를 초과했습니다.</string>
+    <string name="API_WaitingTitle">API 한도를 초과했어요.</string>
     <string name="AnalyticsDone">트윗 일지가 완성되었어요!</string>
     <string name="TweetAnalyticsRun">일지 갱신하기</string>
     <string name="AnalyticsReport">트윗 일지</string>
