--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,8 +100,8 @@
     <string name="HetzerConditions_12_Desc">어떤 키워드가 포함되지 않았을 때 트윗을 남겨둘까요?</string>
     <string name="HetzerConditions_15_Desc">최근 몇 개 까지의 트윗을 남겨둘까요?</string>
     <string name="HetzerConditions_16_Desc">최근 몇 분 내에 작성한 트윗까지 남겨둘까요?</string>
-    <string name="FriendFetch_WaitingTitle">팔로잉이 너무 많아서 API 한도를 초과했어요…</string>
-    <string name="FollowerFetch_WaitingTitle">팔로워가 너무 많아서 API 한도를 초과했어요…</string>
+    <string name="FriendFetch_WaitingTitle">팔로잉이 너무 많아서 API 한도를 초과했어요!</string>
+    <string name="FollowerFetch_WaitingTitle">팔로워가 너무 많아서 API 한도를 초과했어요!</string>
     <string name="WaitingDesc">잠시 후 자동으로 다시 시도할게요…</string>
     <string name="FriendFetch_PullingTile">팔로잉 목록을 불러오는 중이에요.</string>
     <string name="FollowrFetch_PullingTile">팔로워 목록을 불러오는 중이에요.</string>
@@ -145,4 +145,5 @@
     <string name="ChainBlockRunning">체인블락 작업을 시작할게요…</string>
     <string name="Blocking">%1$d명의 유저를 블락하고 있어요…</string>
     <string name="Service">트윗지기 서비스</string>
+    <string name="PullingMe">내 정보를 불러오는 중이에요…</string>
 </resources>
