--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,5 @@
     <string name="IgnoreMyFollowing">내가 팔로잉하는 사람은 블락 대상에서 제외하기</string>
     <string name="Donate">개발자에게 기부하기</string>
     <string name="DonateDesc">개발자에게 기부하고 인앱 광고를 제거하세요.</string>
+    <string name="duplicateService_BlockClear">블락 일괄 해제는 한 번에 하나만 실행할 수 있어요.</string>
 </resources>
