새 필터 추가. closed #13

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,14 +78,22 @@
     <string name="HetzerConditions_14">위치 정보를 포함하지 않은 트윗</string>
     <string name="HetzerConditions_15">최근 %1$s개 까지의 트윗</string>
     <string name="HetzerConditions_16">최근 %1$s분 이내의 트윗</string>
+    <string name="HetzerConditions_17">%1$s회 이상 인용 받은 트윗</string>
+    <string name="HetzerConditions_18">%1$s회 이하 인용 받은 트윗</string>
+    <string name="HetzerConditions_19">%1$s회 이상 멘션 받은 트윗</string>
+    <string name="HetzerConditions_20">%1$s회 이하 멘션 받은 트윗</string>
     <string name="HetzerConditions_5_Desc">마음이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
-    <string name="HetzerConditions_6_Desc">마음이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
-    <string name="HetzerConditions_7_Desc">마음이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
-    <string name="HetzerConditions_8_Desc">마음이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
+    <string name="HetzerConditions_6_Desc">마음이 몇 개 이하일 때 트윗을 남겨둘까요?</string>
+    <string name="HetzerConditions_7_Desc">리트윗이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
+    <string name="HetzerConditions_8_Desc">리트윗이 몇 개 이하일 때 트윗을 남겨둘까요?</string>
     <string name="HetzerConditions_11_Desc">어떤 키워드가 포함되었을 때 트윗을 남겨둘까요?</string>
     <string name="HetzerConditions_12_Desc">어떤 키워드가 포함되지 않았을 때 트윗을 남겨둘까요?</string>
     <string name="HetzerConditions_15_Desc">최근 몇 개 까지의 트윗을 남겨둘까요?</string>
     <string name="HetzerConditions_16_Desc">최근 몇 분 내에 작성한 트윗까지 남겨둘까요?</string>
+    <string name="HetzerConditions_17_Desc">인용이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
+    <string name="HetzerConditions_18_Desc">인용이 몇 개 이하일 때 트윗을 남겨둘까요?</string>
+    <string name="HetzerConditions_19_Desc">멘션이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
+    <string name="HetzerConditions_20_Desc">멘션이 몇 개 이하일 때 트윗을 남겨둘까요?</string>
     <string name="Error_NoParameter">인텐트 호출에 필요한 인자가 갖춰지지 않았습니다. 액티비티를 종료합니다.</string>
     <string name="Error_WrongParameter">인텐트 호출에 필요한 인자가 잘못되었습니다. 액티비티를 종료합니다.</string>
     <string name="TweetCleanerReport">트윗 청소기 보고서</string>
