실제 광고 제거 코드 추가, 누락된 문자열 상수 리소스화

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,11 @@
     <string name="DonateDesc">개발자에게 기부하고 인앱 광고를 제거하세요.</string>
     <string name="duplicateService_BlockClear">블락 일괄 해제는 한 번에 하나만 실행할 수 있어요.</string>
     <string name="skuPostfix">(트윗지기)</string>
+    <string name="Notice">알림</string>
+    <string name="PurchaseHistoryRestored">구매 내역이 복원되었습니다!</string>
+    <string name="Thanks">감사합니다!</string>
+    <string name="Purchased">결제가 완료되었습니다.</string>
+    <string name="tutorial_changeAccount">계정 변경하기</string>
+    <string name="tutorial_changeAccountDesc">이곳을 클릭해서 트윗지기에 로그인한 계정을 바꿀 수 있어요!</string>
+    <string name="HetzerRunning">트윗청소기가 실행되었어요.</string>
 </resources>
