기부 페이지에 개발자 프로필 추가, 상위 버전의 기기에서 이미지가 불러와지지 않는 문제 수정 (http 배제)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,4 +152,5 @@
     <string name="Paid">결제 완료</string>
     <string name="RestorePayment">구매 내역 복원하기</string>
     <string name="RestorePaymentDesc">기존 구매 이력을 불러와요. 추가 과금은 되지 않아요!</string>
+    <string name="PaymentFailed">결제에 실패했습니다.</string>
 </resources>
