일지 예약 작성 버튼 추가, 일지 작성 페이지 레이아웃 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,9 +35,9 @@
     <string name="JobDone">작업을 완료했습니다.</string>
     <string name="Chainblock">체인블락</string>
     <string name="ChainblockDescription">대상 유저의 모든 팔로잉과 팔로워를 블락해요.</string>
-    <string name="Report_Label_TweetCount">트윗 수 : </string>
-    <string name="Report_Label_FriendCount">팔로잉 수 : </string>
-    <string name="Report_Label_FollowerCount">팔로워 수 : </string>
+    <string name="Report_Label_TweetCount">트윗 : </string>
+    <string name="Report_Label_FriendCount">팔로잉 : </string>
+    <string name="Report_Label_FollowerCount">팔로워 : </string>
     <string name="Format_Date">yyyy년 MM월 dd일</string>
     <string name="Format_Time">aa hh시 mm분</string>
     <string name="Format_DateTime">yyyy년 MM월 dd일 hh시 mm분 ss초</string>
@@ -179,4 +179,5 @@
     <string name="StopWithNetworkError">네트워크 오류로 인해 작업이 중단되었습니다.</string>
     <string name="InitializeFailed">서비스를 시작하지 못했습니다.</string>
     <string name="Error_OutOfMemory">죄송합니다! 메모리 한계를 초과해서 작업에 실패했습니다. 개발자가 최적화를 잘못했나 봐요.</string>
+    <string name="SetScheduledAnalytics">매일 저녁 자동으로 트윗일지 작성하기</string>
 </resources>
