--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="app_name">트윗지기</string>
     <string name="TweetCleaner">트윗 청소기</string>
-    <string name="DeleteOption">삭제 옵션</string>
-    <string name="DeleteOptionPlease">지우지 않고 남겨둘 트윗을 지정하세요.</string>
+    <string name="DeleteOption">삭제 조건 지정</string>
+    <string name="DeleteOptionPlease">어떤 트윗을 삭제하거나 남겨둘지 정의합니다.</string>
     <string name="WhichTweetDoNotRemove">어떤 트윗을 남겨둘까요?</string>
     <string name="AddCondition">조건 추가</string>
     <string name="OK">확인</string>
@@ -180,4 +180,16 @@
     <string name="InitializeFailed">서비스를 시작하지 못했습니다.</string>
     <string name="Error_OutOfMemory">죄송합니다! 메모리 한계를 초과해서 작업에 실패했습니다. 개발자가 최적화를 잘못했나 봐요.</string>
     <string name="SetScheduledAnalytics">매일 저녁 자동으로 트윗일지 작성하기</string>
+    <string name="HetzerDescription">트위터 API의 한계로 오래된 트윗은 지워지지 않을 수 있습니다.\n자세한 내용은 여기를 참고하세요.</string>
+    <string name="UnknownTime">날짜 미상</string>
+    <string name="LogicPair_SaveRule">트윗 보존 규칙 만들기</string>
+    <string name="LogicPair_SaveRule_Description">이 조건을 만족하는 트윗들은 트윗 삭제 규칙에 해당하더라도 절대 삭제되지 않습니다.</string>
+    <string name="LogicPair_RemRule">트윗 삭제 규칙 만들기</string>
+    <string name="LogicPair_RemRule_Description">이 조건을 만족하는 트윗들을 삭제합니다.</string>
+    <string name="LogicPair_Description">원하는 만큼 트윗 청소 규칙을 만들 수 있습니다.\n트윗 보존 규칙을 지정하면 트윗 삭제 규칙에 해당하더라도 삭제하지 않고 남겨둘 수 있습니다.</string>
+    <string name="LogicPair_Apply">저장하기</string>
+    <string name="HetzerConditions_0">모든 트윗</string>
+    <string name="LogicPairSubject_Delete">아래 조건을 모두 만족하는 트윗을 삭제합니다.</string>
+    <string name="LogicPairSubject_Save">아래 조건을 모두 만족하는 트윗을 삭제하지 않습니다.</string>
+    <string name="Edit">편집</string>
 </resources>
