NotificationBuilder에서 action을 추가한 뒤 삭제해도 액션이 남아있는 버그 수정, 논리쌍 예외처리 및 디자인 수정, 잘못된 날짜 문자열 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,4 +192,5 @@
     <string name="LogicPairSubject_Delete">아래 조건을 모두 만족하는 트윗을 삭제합니다.</string>
     <string name="LogicPairSubject_Save">아래 조건을 모두 만족하는 트윗을 삭제하지 않습니다.</string>
     <string name="Edit">편집</string>
+    <string name="NoLogic">설정된 조건이 없어요!</string>
 </resources>
