--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,4 +193,5 @@
     <string name="LogicPairSubject_Save">아래 조건을 모두 만족하는 트윗을 삭제하지 않습니다.</string>
     <string name="Edit">편집</string>
     <string name="NoLogic">설정된 조건이 없어요!</string>
+    <string name="BlockClearWarning">블락 일괄 해제 기능을 실행하면 가장 최근에 블락한 사람부터 순차적으로 해제를 시작합니다.</string>
 </resources>
